--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,6 +16,8 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: #f9f9f9;
+  overscroll-behavior: none;
+  -webkit-overscroll-behavior: none;
 }
 
 /* Layout */
