--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -261,8 +261,12 @@ h1 {
 }
 
 /* iOS Tip */
-#iosTip {
+#iosTip, #iosThirdpartyTip {
   display: none;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   font-size: 14px;
   text-align: center;
@@ -270,21 +274,27 @@ h1 {
 }
 
 #iosTipAction {
-  display: inline-flex;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 4px;
-  background-color: rgba(0, 0, 0, 0.01);
-  border: 2px dotted rgba(0, 0, 0, 0.1);
+  justify-content: center;
+  gap: 5px;
   padding: 10px 20px;
   border-radius: 9999px;
-  margin-top: 10px;
+  margin-top: 20px; 
+  margin-bottom: 20px;
 }
 
-#iosTipAction > span {
-  font-weight: 500;
-  display: inline-flex;
+#iosTipAction > div {
+  font-weight: 400;
+  display: flex;
   align-items: center;
-  gap: 1px;
+  gap: 3px;
+}
+
+#copyLinkBtn {
+  cursor: pointer;
+  padding: 3px;
 }
 
 /* Subscribe Info */
@@ -305,6 +315,11 @@ h1 {
   height: 14px;
   vertical-align: middle;
   stroke-width: 3px;
+}
+.ios-icon.inline {
+  display:inline;
+  vertical-align:middle;
+  margin-left: 3px;
 }
 
 #sub .ios-icon {
@@ -329,5 +344,24 @@ h1 {
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+.swoosh-down {
+  transition: opacity 0.2s cubic-bezier(0.420, 0.035, 0.000, 0.995), transform 0.25s cubic-bezier(0.420, 0.035, 0.000, 0.995);
+  animation: swoosh-down 2s cubic-bezier(0.420, 0.035, 0.000, 0.995) infinite;
+}
+@keyframes swoosh-down {
+  0% {
+    opacity: 0;
+    transform: translateY(40px) scaleY(0.8);
+  }
+  50% {
+    opacity: 1;
+    transform: translateY(50px) scaleY(1);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(100px) scaleY(1);
   }
 }
