--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -110,14 +110,16 @@ h1 {
 .last-notification {
   display: flex;
   flex-direction: column;
-  gap: 3px;
+  align-items: center;
+  gap: 1px;
   font-size: 14px;
   font-weight: 600;
   margin-bottom: 35px;
 }
 .last-notification > label {
-  font-size:12px;
-  font-weight: normal;
+  font-size:10px;
+  font-weight: medium;
+  text-transform: uppercase;
   margin-bottom:5px;
   opacity: 0.3;
   color: black;
@@ -129,6 +131,38 @@ h1 {
 
 .last-notification > label > .ios-icon {
   stroke-width: 2px;
+}
+
+.last-notification .original {
+  position: relative;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border: 1px dashed rgba(0, 0, 255, 0);
+  border-radius: 999px;
+  background-color: rgba(0, 0, 255, 0);
+  width: max-content;
+  transition: border-color 0.2s cubic-bezier(0.420, 0.035, 0.000, 0.995), background-color 0.2s cubic-bezier(0.420, 0.035, 0.000, 0.995), padding 0.2s cubic-bezier(0.420, 0.035, 0.000, 0.995);
+}
+
+.last-notification .original.unrevealed {
+  border-color: rgba(0, 0, 255, 0.3);
+  background-color: rgba(0, 0, 255, 0.05);
+  padding-left: 10px;
+  padding-right: 10px;
+  cursor: pointer;
+}
+
+.last-notification .original.revealed {
+  border-color: rgba(0, 0, 255, 0);
+  background-color: rgba(0, 0, 255, 0);
+  padding-left: 20px;
+  padding-right: 20px;
+  cursor: default;
+}
+
+.last-notification .reveal-text {
+  color: rgba(0, 0, 255, 0.7);
+  user-select: none;
 }
 
 #sendNow {
