--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -499,10 +499,11 @@ h1 {
 .history-meta {
   display: flex;
   justify-content: center;
-  gap: 12px;
-  font-size: 12px;
+  gap: 5px;
+  font-size: 10px;
+  font-weight: 500;
   color: rgba(255, 255, 255, 0.3);
-  margin-top:4px;
+  margin-top:2px;
 }
 
 .history-language,
