--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -427,11 +427,13 @@ h1 {
   border-radius: 999px;
   transform: scale(0.9);
   opacity: 0;
+  border: 2px solid rgba(255, 255, 255, 0);
+  transition: border 300ms ease-out;
   animation: history-item-appear 300ms cubic-bezier(0.420, 0.035, 0.000, 0.995) forwards;
 }
 
 .history-item.highlighted {
-  border: 2px solid rgba(0, 0, 255, 0.5);
+  border: 2px solid rgba(255, 255, 255, 1)
 }
 
 @keyframes history-item-appear {
@@ -454,16 +456,6 @@ h1 {
   }
 }
 
-@keyframes highlight-pulse {
-  0%, 100% {
-    background-color: rgba(0, 0, 0, 0.85);
-    transform: scale(1);
-  }
-  50% {
-    background-color: rgba(0, 0, 255, 0.3);
-    transform: scale(1.05);
-  }
-}
 
 
 .history-border {
@@ -542,6 +534,7 @@ h1 {
   display: flex;
   align-items: center;
   gap: 3px;
+  white-space:nowrap;
 }
 
 #copyLinkBtn {
