--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -128,8 +128,7 @@ h1 {
   font-size:10px;
   font-weight: medium;
   text-transform: uppercase;
-  opacity: 0.3;
-  color: black;
+  color: rgba(0, 0, 0, 0.3);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -137,29 +136,11 @@ h1 {
   margin: 0;
 }
 
-.refresh-btn {
-  border: none;
-  background: transparent;
-  cursor: pointer;
-  padding: 2px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 0.2s, opacity 0.2s;
-  opacity: 0.5;
-}
-
-.refresh-btn:disabled {
-  cursor: not-allowed;
-  opacity: 0.2;
-}
-
 .last-notification-header .ios-icon {
   width: 14px;
   height: 14px;
   color: black;
-  stroke-width: 2px;
+  stroke-width: 3px;
 }
 
 .last-notification > label > .ios-icon {
@@ -335,16 +316,12 @@ h1 {
 
 /* History Button */
 .history-button {
-  padding: 2px;
-
+  padding: 4px;
   cursor:pointer;
   box-shadow: none;
   border: none;
   background: none;
   opacity: 0.5;
-}
-
-.history-button:hover:not(:disabled) {
 }
 
 /* History Overlay */
@@ -544,9 +521,11 @@ h1 {
 
 /* Subscribe Info */
 #subscribe-info {
-  margin-top: 20px;
+  margin-top: 8px;
   font-size: 12px;
-  color: rgba(0, 0, 0, 0.6);
+  color: rgba(0, 0, 0, 0.3);
+  line-height: 13px;
+  font-weight: 500;
   text-align: center;
   max-width: 250px;
 }
